[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/PixeloidSans-mLxMm.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SoundSettings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="SoundSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -192.0
margin_right = 128.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.0
margin_top = 16.0
margin_right = 47.0
margin_bottom = 41.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_top = 82.0
margin_right = 256.0
margin_bottom = 82.0
custom_constants/margin_right = 32
custom_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 32.0
margin_right = 224.0
margin_bottom = 72.0
custom_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 20.0
custom_constants/separation = 11
alignment = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 2.0
margin_right = 53.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Music"

[node name="MusicBar" type="HScrollBar" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 192.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 20 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 192.0
margin_bottom = 72.0
custom_constants/separation = 11
alignment = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_right = 53.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "SFX"

[node name="SFXBar" type="HScrollBar" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 192.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 20 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.0
margin_top = -58.0
margin_right = 27.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/MusicBar" to="." method="_on_MusicBar_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/SFXBar" to="." method="_on_SFXBar_value_changed"]
